@@ -1,25 +1,19 @@
 Package: qdapTools
 Type: Package
-Title: Tools for the qdap Package
-Version: 1.3.0
-Date: 2014-04-19
+Title: Tools for the 'qdap' Package
+Version: 1.3.1
+Date: 2015-05-26
 Authors@R: c(person("Bryan", "Goodrich", role = "ctb"), person("Dason",
-    "Kurkiewicz", role = "ctb"), person("Kirill", "Muller", role = "ctb"),
-    person("Tyler", "Rinker", email = "tyler.rinker@gmail.com",
-    role = c("aut", "cre")))
+        "Kurkiewicz", role = "ctb"), person("Kirill", "Muller", role =
+        "ctb"), person("Tyler", "Rinker", email =
+        "tyler.rinker@gmail.com", role = c("aut", "cre")))
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
-Depends:
-    R (>= 3.0.0)
-Imports:
-    chron,
-    data.table (>= 1.9.4),
-    RCurl,
-    XML
-Suggests:
-    testthat
+Depends: R (>= 3.0.0)
+Imports: chron, data.table (>= 1.9.4), RCurl, XML
+Suggests: testthat
 LazyData: TRUE
-Description: A collection of tools associated with the qdap package that may be
-    useful outside of the context of text analysis.
+Description: A collection of tools associated with the 'qdap' package
+        that may be useful outside of the context of text analysis.
 License: GPL-2
 URL: http://trinker.github.com/qdapTools/
 BugReports: http://github.com/trinker/qdapTools/issues
