@@ -1,4 +1,4 @@
-# Generated by roxygen2 (4.1.0): do not edit by hand
+# Generated by roxygen2 (4.1.1): do not edit by hand
 
 S3method(loc_split,character)
 S3method(loc_split,data.frame)
@@ -54,6 +54,9 @@ export(read_docx)
 export(repo2github)
 export(run_split)
 export(sec2hms)
+export(shift)
+export(shift_left)
+export(shift_right)
 export(split_vector)
 export(start_end)
 export(text2color)
