@@ -6,11 +6,11 @@ citEntry(entry = "manual",
     author = "Tyler W. Rinker",
     organization = "University at Buffalo/SUNY",
     address = "Buffalo, New York",
-    note = "version 1.3.0",
+    note = "1.3.1",
     year = "2015",
     url = "http://github.com/trinker/qdapTools", 
     textVersion  = paste("Rinker, T. W. (2015).",
         "qdapTools: Tools to Accompany the qdap Package.",
-        "version 1.3.0. University at Buffalo. Buffalo, New York.",
+        "1.3.1. University at Buffalo. Buffalo, New York.",
         "http://github.com/trinker/qdapTools")
 )
