@@ -33,7 +33,7 @@ path2 <- file.path(path, "/index.html")
 rdme <- file.path(R_USER, "GitHub/qdapTools/inst/extra_statdoc/readme.R")
 
 extras <- qdap::qcv("hash_look", "%l%", "%l+%", "sec2hms", "%hl%", 
-	"%hl+%",  "%lc%", "%lc+%")
+	"%hl+%",  "%lc%", "%lc+%", "shift_left", "shift_right")
 
 drops <- qdap::qcv(lookup.character, lookup.data.frame, lookup.list, lookup.matrix, 
 	hash_e, lookup.factor, lookup.numeric,v_outer.data.frame, v_outer.list, 
@@ -83,7 +83,7 @@ path2 <- file.path(path, "/index.html")
 rdme <- "inst/extra_statdoc/readme.R"
 library(acc.roxygen2); #library(qdap);
 extras <- qcv("hash_look", "%l%", "%l+%", "sec2hms", "%hl%", 
-	"%hl+%",  "%lc%", "%lc+%")
+	"%hl+%",  "%lc%", "%lc+%", "shift_left", "shift_right")
 
 drops <- qcv(lookup.character, lookup.data.frame, lookup.list, lookup.matrix, 
     hash_e, lookup.factor, lookup.numeric,v_outer.data.frame, v_outer.list, 
