@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/run_split.R
 \name{run_split}
 \alias{run_split}
@@ -13,7 +13,7 @@ run_split(x)
 Returns a list of vectors.
 }
 \description{
-Splits a string into a vector or runs.
+Splits a string into a vector of runs.
 }
 \examples{
 run_split(c("122333444455555666666", NA, "abbcccddddeeeeeffffff"))
